salesforce/force-app/main/default/objects/ScanAuditEvent__c/ScanAuditEvent__c.object-meta.xml
<CustomObject>
    <description>Phase 24z-I — single audit log for scan-time events. Replaces System.debug calls so failures, gating decisions, and warnings persist beyond the 24-hour debug log retention window. Read by the scan-record Diagnostics surface and the DetectorHealth__c rollup.</description>
    <label>Scan Audit Event</label>
    <nameField>
        <displayFormat>SAE-{00000000}</displayFormat>
        <label>Audit Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scan Audit Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>