salesforce/force-app/main/default/objects/ScanAuditEvent__c/fields/DetectorId__c.field-meta.xml
<CustomField>
    <fullName>DetectorId__c</fullName>
    <label>Detector ID</label>
    <description>The detector or bundle this event relates to (e.g. ARM-001, ORD-FOR-002, ARM-CATALOG-BUNDLE). Blank for non-detector events like probe or finalize.</description>
    <type>Text</type>
    <length>50</length>
</CustomField>