salesforce/force-app/main/default/objects/ScanAuditEvent__c/fields/ForensicScan__c.field-meta.xml
<CustomField>
    <fullName>ForensicScan__c</fullName>
    <label>Forensic Scan</label>
    <description>The scan this event belongs to. Master-detail so events are cleaned up when the scan record is deleted.</description>
    <referenceTo>ForensicScan__c</referenceTo>
    <relationshipLabel>Audit Events</relationshipLabel>
    <relationshipName>AuditEvents</relationshipName>
    <type>MasterDetail</type>
</CustomField>