salesforce/force-app/main/default/objects/ScanAuditEvent__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <description>Human-readable event description. For Error severity, include the exception message but NOT the stack trace (use StackTrace__c). Capped at 32k to allow long error chains. Apex-required (AuditLogger guards against blank) — LongTextArea can't be schema-required.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>