salesforce/force-app/main/default/objects/ScanAuditEvent__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <description>Info / Warn / Error. Error events fire ScanEvent__e platform events (24z-K) for real-time subscribers. Apex-required by AuditLogger; not schema-required because Salesforce rejects FLS deploy on required fields.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Info</fullName><default>false</default><label>Info</label></value>
            <value><fullName>Warn</fullName><default>false</default><label>Warn</label></value>
            <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>