salesforce/force-app/main/default/objects/ScanAuditEvent__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <description>Where in the scan pipeline the event was emitted. Used by the Diagnostics LWC to group events by subsystem and by analytics to identify hotspots. Apex-required by AuditLogger.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>detector</fullName><default>false</default><label>Detector</label></value>
            <value><fullName>chunk</fullName><default>false</default><label>Chunk</label></value>
            <value><fullName>probe</fullName><default>false</default><label>Schema Probe</label></value>
            <value><fullName>gating</fullName><default>false</default><label>Surface Gating</label></value>
            <value><fullName>finalize</fullName><default>false</default><label>Finalize</label></value>
            <value><fullName>attribution</fullName><default>false</default><label>Attribution</label></value>
            <value><fullName>trust</fullName><default>false</default><label>Trust Score</label></value>
            <value><fullName>health</fullName><default>false</default><label>Health Score</label></value>
            <value><fullName>auto-detect</fullName><default>false</default><label>Product Auto-Detect</label></value>
            <value><fullName>other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>