salesforce/force-app/main/default/objects/ScanAuditEvent__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <label>Stack Trace</label>
    <description>Apex stack trace, populated by AuditLogger.error(scanId, source, detector, ex) when an Exception is passed. Null for non-exception events.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>